--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -7,7 +7,7 @@
 
 /* ヘッダー */
 .site-header {
-    background-color: #E6B422;
+    /* background-color: #E6B422; */
     height: 30px;
     left: 0;
     position: fixed;
